# demo-api

./: Jenkinsfile  docker-compose.yml  main.py  pyproject.toml
Docker/app/: Dockerfile
